# tech-test

./: README.md  design.excalidraw  main.py  pyproject.toml  query_bigquery.py  resources.md  run-sql.py  semantic_layer_engine.py  test_data.json
